fix dark mode color issue

--- a/modules/11/1/style.css
+++ b/modules/11/1/style.css
@@ -8,13 +8,12 @@
 	color: var(--article-color-bg);
 }
 input:invalid, textarea:invalid {
-    background-color: #fff2f4;
+    background-color: var(--article-color-box);
 }
 input:focus, textarea:focus {
     border-left: 5px solid solid var(--article-color-h);
 }
 .d2u_helper_module_11_1 input, .d2u_helper_module_11_1 select, .d2u_helper_module_11_1 textarea {
-    background-color: white;
     border: 1px solid var(--article-color-h);
     width: 100%;
 }
